tests/bad/example-e08.rat
fn Main () -> Void {
  let a: Int = 5;
  a++;
  return;
}
